# mi-hash

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
docs/: ADR.md  INSTALL.md
installer/: installer.ps1
src/mi_hash/: cli.py  core.py
tests/: test_core.py
